mid work